--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ header{
     align-items: center;
     border-radius: 50px;
     user-select: none;
+    opacity: 1;
+    animation: to-bottom .9s ease forwards;
 }
 
 header h2{
@@ -88,11 +90,15 @@ header a button:hover{
     text-align: right;
     font-size: large;
     font-weight: 300;
+    opacity: 1;
+    animation: to-left 1.3s ease forwards;
 }
 
 .home .container .content-text h1{
     font-size: 9rem;
     text-align: right;
+    opacity: 1;
+    animation: to-left 2s ease forwards;
 }
 
 .home .container .content-text p{
@@ -100,6 +106,13 @@ header a button:hover{
     font-size: 1.2rem;
     line-height: 150%;
     padding: 0 0 50px;
+    opacity: 1;
+    animation: to-left 2.5s ease forwards;
+}
+
+.home .container .content-text .hero-btns{
+    opacity: 1;
+    animation: to-left 2.5s ease forwards;
 }
 
 .home .container .content-text .hero-btns a{
@@ -115,7 +128,13 @@ header a button:hover{
     padding:0 40px;
     font-weight: 600;
     font-size: 1.1rem;
+    background: transparent;
+}
 
+.home .container .content-text .hero-btns a:hover{
+    border: 7px solid #1b1f33;
+    background-color: var(--main-color);
+    color: var(--main-2-color);
 }
 
 .home .container .content-text a i{ 
@@ -134,6 +153,8 @@ header a button:hover{
     user-select: none;
     filter: drop-shadow( 50px 50px 100px var(--main-color));
     overflow: hidden;
+    opacity: 1;
+    animation: to-right 2.5s ease forwards;
 }
 
 .home .last-s{
@@ -157,12 +178,83 @@ header a button:hover{
 .home .last-s .btn-scroll{
     position: fixed;
     display: flex;
-    bottom: 60px;
+    bottom: 50px;
     right: 50%;
     justify-content: center;
     font-size: 2rem;
     background: linear-gradient(0deg, rgba(252,252,255,1) 0%, rgba(136,139,155,0.5466561624649859) 46%, rgba(15,22,50,0) 100%);
     padding: 10px 8px;
     border-radius: 50px;
+    transition: .4s;
+    color: var(--main-2-color);
+    user-select: none;
 }
 
+/* .home .last-s .btn-scroll i{
+
+} */
+
+.home .last-s .btn-scroll:hover{
+    background-color: var(--main-color);
+    color: #000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /* KEYDRAMES */
+
+ @keyframes to-bottom{
+    0%{
+        opacity: 0;
+        transform: translateY(-50%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+ }
+
+  @keyframes to-right{
+    0%{
+        opacity: 0;
+        transform: translateY(-50%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+ }
+
+  @keyframes to-left{
+    0%{
+        opacity: 0;
+        transform: translateX(-50%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+ }
+
+ 
